--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ matrix:
   fast_finish: true
 
 before_script:
-  - composer update
+  - composer update --no-interaction --prefer-dist
   - java -version
   - java -jar pdfbox-app.jar 2>&1 | head -n 1
 
